--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
 </head>
 
 <body>
-
+    <div>
+    Webpage for tests
+    </div>
+    <hr>
     <form action="http://localhost:10228/upload" method="post" enctype="multipart/form-data">
-        Select image to upload:
-        <input type="file" name="images" id="images">
+        Select image to upload:<br>
+        <input type="file" name="images" id="images"><br>
         <input type="submit" value="Upload Image" name="submit">
+    </form>
+    <hr>
+    <form action="http://localhost:10228/download" method="post" >
+        Select image to download:<br>
+        Name: <input type="text" name="image" id="image"><br>
+        <input type="submit" value="Download Image" name="submit">
+    </form>
+    <hr>
+    <form action="http://localhost:10228/get/token" method="post" >
+        Obtain a token<br>
+        <input type="submit" value="Get Token" name="submit">
     </form>
 
 </body>
