--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link rel="stylesheet" href="style.css" />
+	</head>
 
-<head>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-    <div>
-    Webpage for tests
-    </div>
-    <hr>
-    <form action="http://localhost:10228/upload" method="post" enctype="multipart/form-data">
-        Select image to upload:<br>
-        <input type="file" name="images" id="images"><br>
-        <input type="submit" value="Upload Image" name="submit">
-    </form>
-    <hr>
-    <form action="http://localhost:10228/download" method="post" >
-        Select image to download:<br>
-        Name: <input type="text" name="image" id="image"><br>
-        <input type="submit" value="Download Image" name="submit">
-    </form>
-    <hr>
-    <form action="http://localhost:10228/get/token" method="post" >
-        Obtain a token<br>
-        <input type="submit" value="Get Token" name="submit">
-    </form>
-
-</body>
-
+	<body>
+		<div>Webpage for tests</div>
+		<hr />
+		<form
+			action="http://localhost:10229/upload"
+			method="post"
+			enctype="multipart/form-data"
+		>
+			Select image to upload:<br />
+			<input type="file" name="images" id="images" /><br />
+			<input type="submit" value="Upload Image" name="submit" />
+		</form>
+		<hr />
+		<form action="http://localhost:10229/download" method="post">
+			Select image to download:<br />
+			Name: <input type="text" name="image" id="image" /><br />
+			<input type="submit" value="Download Image" name="submit" />
+		</form>
+		<hr />
+		<form action="http://localhost:10229/get/token" method="post">
+			Obtain a token<br />
+			<input type="submit" value="Get Token" name="submit" />
+		</form>
+	</body>
 </html>
